ran preprocessing in notebook so it looks cool

--- a/checkpoint2/checkpoint2.ipynb
+++ b/checkpoint2/checkpoint2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,6 @@
     "from typing import Union, List, Dict\n",
     "import json\n",
     "import time\n",
-    "import argparse\n",
     "\n",
     "# ------------ macros ------------ #\n",
     "SAMPLE_RATE = 16e3\n",
@@ -257,16 +256,16 @@
     "    if rename:\n",
     "        t0 = time.time()\n",
     "        rename_audio_files(\n",
-    "            \"./ReCANVo/dataset_file_directory.csv\",\n",
-    "            \"./ReCANVo/\"\n",
+    "            \"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/dataset_file_directory.csv\",\n",
+    "            \"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/\"\n",
     "        )\n",
     "        print(f\"📝 rename_audio_files completed in {time.time() - t0:.2f} seconds\")\n",
     "\n",
     "    # Step 2: Load audio metadata\n",
     "    t0 = time.time()\n",
     "    df = load_audio_metadata(\n",
-    "        csv_path=\"./ReCANVo/renamed_metadata.csv\",\n",
-    "        audio_dir=\"./ReCANVo/\",\n",
+    "        csv_path=\"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/renamed_metadata.csv\",\n",
+    "        audio_dir=\"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/\",\n",
     "        limit=limit\n",
     "    )\n",
     "    print(f\"⏳ load_audio_metadata completed in {time.time() - t0:.2f} seconds\")\n",
@@ -301,9 +300,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Starting preprocessing pipeline...\n",
+      "📝 rename_audio_files completed in 0.98 seconds\n",
+      "⏳ load_audio_metadata completed in 206.69 seconds\n",
+      "🗂️ Loading global stats from global_stats.json\n",
+      "🧮 compute_or_load_global_stats completed in 0.15 seconds\n",
+      "\n",
+      "📈 Computed Statistics:\n",
+      "  mean: -55.975612227106474\n",
+      "  std: 18.55726476893056\n",
+      "\n",
+      "🔊 Spectrogram generation completed in 26.33 seconds\n",
+      "\n",
+      "🏁 Full pipeline completed in 234.17 seconds\n",
+      "\n",
+      "shape: (7_077, 7)\n",
+      "┌───────────────────┬──────────────┬─────┬───────────────────┬──────────┬───────┬──────────────────┐\n",
+      "│ Filename          ┆ Audio        ┆ ID  ┆ Label             ┆ Duration ┆ Index ┆ Spectrogram      │\n",
+      "│ ---               ┆ ---          ┆ --- ┆ ---               ┆ ---      ┆ ---   ┆ ---              │\n",
+      "│ str               ┆ list[f64]    ┆ str ┆ str               ┆ f64      ┆ i64   ┆ object           │\n",
+      "╞═══════════════════╪══════════════╪═════╪═══════════════════╪══════════╪═══════╪══════════════════╡\n",
+      "│ P01_dysregulation ┆ [-0.146042,  ┆ P01 ┆ dysregulation-sic ┆ 0.263991 ┆ 1     ┆ [[ 1.90314987    │\n",
+      "│ -sick_1.wav       ┆ -0.152634, … ┆     ┆ k                 ┆          ┆       ┆ 1.55816024 -0.0… │\n",
+      "│                   ┆ 0.006…       ┆     ┆                   ┆          ┆       ┆                  │\n",
+      "│ P01_dysregulation ┆ [0.088348,   ┆ P01 ┆ dysregulation-sic ┆ 0.931995 ┆ 2     ┆ [[ 1.15689149    │\n",
+      "│ -sick_2.wav       ┆ 0.091385, …  ┆     ┆ k                 ┆          ┆       ┆ 0.83036181  0.2… │\n",
+      "│                   ┆ -0.1295…     ┆     ┆                   ┆          ┆       ┆                  │\n",
+      "│ P01_dysregulation ┆ [0.035843,   ┆ P01 ┆ dysregulation-sic ┆ 1.144989 ┆ 3     ┆ [[-0.23412235    │\n",
+      "│ -sick_3.wav       ┆ 0.024033, …  ┆     ┆ k                 ┆          ┆       ┆ -0.22180939      │\n",
+      "│                   ┆ 0.21106…     ┆     ┆                   ┆          ┆       ┆ -0.4…            │\n",
+      "│ P01_dysregulation ┆ [0.00676,    ┆ P01 ┆ dysregulation-sic ┆ 3.647982 ┆ 4     ┆ [[ 0.51460581    │\n",
+      "│ -sick_4.wav       ┆ -0.000458, … ┆     ┆ k                 ┆          ┆       ┆ 0.31279042 -0.0… │\n",
+      "│                   ┆ 0.05534…     ┆     ┆                   ┆          ┆       ┆                  │\n",
+      "│ P01_dysregulation ┆ [0.028397,   ┆ P01 ┆ dysregulation-sic ┆ 0.405986 ┆ 5     ┆ [[ 0.55980165    │\n",
+      "│ -sick_5.wav       ┆ 0.027649, …  ┆     ┆ k                 ┆          ┆       ┆ 0.38610811 -0.2… │\n",
+      "│                   ┆ -0.3195…     ┆     ┆                   ┆          ┆       ┆                  │\n",
+      "│ …                 ┆ …            ┆ …   ┆ …                 ┆ …        ┆ …     ┆ …                │\n",
+      "│ P16_delighted_135 ┆ [0.0, 0.0, … ┆ P16 ┆ delighted         ┆ 1.046984 ┆ 135   ┆ [[-0.1850793     │\n",
+      "│ .wav              ┆ -0.013916]   ┆     ┆                   ┆          ┆       ┆ 0.24888102  0.2… │\n",
+      "│ P16_delighted_136 ┆ [0.014069,   ┆ P16 ┆ delighted         ┆ 0.643016 ┆ 136   ┆ [[ 0.35468619    │\n",
+      "│ .wav              ┆ 0.009094, …  ┆     ┆                   ┆          ┆       ┆ 0.4770178   0.6… │\n",
+      "│                   ┆ -0.0006…     ┆     ┆                   ┆          ┆       ┆                  │\n",
+      "│ P16_delighted_137 ┆ [-0.003715,  ┆ P16 ┆ delighted         ┆ 0.773878 ┆ 137   ┆ [[-0.21028448    │\n",
+      "│ .wav              ┆ -0.004659, … ┆     ┆                   ┆          ┆       ┆ -0.04781407      │\n",
+      "│                   ┆ 0.022…       ┆     ┆                   ┆          ┆       ┆ 0.1…             │\n",
+      "│ P16_delighted_138 ┆ [-0.002249,  ┆ P16 ┆ delighted         ┆ 0.747642 ┆ 138   ┆ [[ 0.69461725    │\n",
+      "│ .wav              ┆ -0.004126, … ┆     ┆                   ┆          ┆       ┆ 0.9290602   0.8… │\n",
+      "│                   ┆ 0.018…       ┆     ┆                   ┆          ┆       ┆                  │\n",
+      "│ P16_delighted_139 ┆ [-0.013641,  ┆ P16 ┆ delighted         ┆ 1.278005 ┆ 139   ┆ [[-0.20681652    │\n",
+      "│ .wav              ┆ -0.011871, … ┆     ┆                   ┆          ┆       ┆ 0.06343726  0.0… │\n",
+      "│                   ┆ 0.010…       ┆     ┆                   ┆          ┆       ┆                  │\n",
+      "└───────────────────┴──────────────┴─────┴───────────────────┴──────────┴───────┴──────────────────┘\n"
+     ]
+    }
+   ],
    "source": [
     "# set rename to False if files already renamed\n",
     "pipeline(\n",
@@ -311,6 +368,13 @@
     "    limit=None # processes all files \n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
