Added error handling for renaming files and changed file paths to use global variables

--- a/checkpoint2/checkpoint2.ipynb
+++ b/checkpoint2/checkpoint2.ipynb
@@ -34,9 +34,13 @@
     "from typing import Union, List, Dict\n",
     "import json\n",
     "import time\n",
+    "import argparse\n",
     "\n",
     "# ------------ macros ------------ #\n",
     "SAMPLE_RATE = 16e3\n",
+    "ORG_CSV_PATH = 'ReCANVo/dataset_file_directory.csv'\n",
+    "RENAME_CSV_PATH = 'ReCANVo/renamed_metadata.csv'\n",
+    "AUDIO_DIR = 'ReCANVo/'\n",
     "\n",
     "\n",
     "# ----------------------- preprocessing functions ----------------------- #\n",
@@ -68,9 +72,14 @@
     "        old_path = os.path.join(audio_dir, org_name)\n",
     "        new_path = os.path.join(audio_dir, new_name)\n",
     "\n",
+    "        if not os.path.exists(old_path):\n",
+    "            print(f\"❌ File not found: {old_path}. Skipping renaming process.\")\n",
+    "            return  # Exit the function immediately if any file is missing\n",
+    "\n",
     "        os.rename(old_path, new_path)\n",
     "        renamed_files.append((new_name, id, label, index))\n",
     "\n",
+    "    # If renaming was successful, save the updated metadata\n",
     "    renamed_df = pl.DataFrame(renamed_files, schema=[\"Filename\", \"ID\", \"Label\", \"Index\"], orient=\"row\")\n",
     "    output_path = os.path.join(audio_dir, output_csv)\n",
     "    renamed_df.write_csv(output_path)\n",
@@ -244,7 +253,6 @@
     "    return S_fixed\n",
     "\n",
     "\n",
-    "\n",
     "def pipeline(rename: bool=False, limit: Union[int, None] = None):\n",
     "    \"\"\"\n",
     "    Pipeline to run all preprocessing functions with timing.\n",
@@ -256,16 +264,16 @@
     "    if rename:\n",
     "        t0 = time.time()\n",
     "        rename_audio_files(\n",
-    "            \"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/dataset_file_directory.csv\",\n",
-    "            \"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/\"\n",
+    "            csv_path=ORG_CSV_PATH,\n",
+    "            audio_dir=AUDIO_DIR,\n",
     "        )\n",
     "        print(f\"📝 rename_audio_files completed in {time.time() - t0:.2f} seconds\")\n",
     "\n",
     "    # Step 2: Load audio metadata\n",
     "    t0 = time.time()\n",
     "    df = load_audio_metadata(\n",
-    "        csv_path=\"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/renamed_metadata.csv\",\n",
-    "        audio_dir=\"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/ReCANVo/\",\n",
+    "        csv_path=RENAME_CSV_PATH,\n",
+    "        audio_dir=AUDIO_DIR,\n",
     "        limit=limit\n",
     "    )\n",
     "    print(f\"⏳ load_audio_metadata completed in {time.time() - t0:.2f} seconds\")\n",
@@ -308,18 +316,18 @@
      "output_type": "stream",
      "text": [
       "🚀 Starting preprocessing pipeline...\n",
-      "📝 rename_audio_files completed in 0.98 seconds\n",
-      "⏳ load_audio_metadata completed in 206.69 seconds\n",
+      "📝 rename_audio_files completed in 0.97 seconds\n",
+      "⏳ load_audio_metadata completed in 95.80 seconds\n",
       "🗂️ Loading global stats from global_stats.json\n",
-      "🧮 compute_or_load_global_stats completed in 0.15 seconds\n",
+      "🧮 compute_or_load_global_stats completed in 0.17 seconds\n",
       "\n",
       "📈 Computed Statistics:\n",
       "  mean: -55.975612227106474\n",
       "  std: 18.55726476893056\n",
       "\n",
-      "🔊 Spectrogram generation completed in 26.33 seconds\n",
+      "🔊 Spectrogram generation completed in 40.37 seconds\n",
       "\n",
-      "🏁 Full pipeline completed in 234.17 seconds\n",
+      "🏁 Full pipeline completed in 137.32 seconds\n",
       "\n",
       "shape: (7_077, 7)\n",
       "┌───────────────────┬──────────────┬─────┬───────────────────┬──────────┬───────┬──────────────────┐\n",
@@ -393,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
