created header for test 2 summary and results

--- a/checkpoint2/checkpoint2.ipynb
+++ b/checkpoint2/checkpoint2.ipynb
@@ -878,12 +878,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test 2: MFCC Mean Difference between \"Yes\" and \"No\" with Mann-Whitney \n",
+    "### Test 2: MFCC Mean Differences between \"Yes\" and \"No\" Vocalizations (Mann-Whitney U Test)\n",
     "\n",
-    "__Notes:__\n",
-    "- MFCC-1 captures the broad tilt of the spectrum (low vs high freq balance).\n",
-    "- MFCC-2 captures whether the spectrum is flat or peaked in the center.\n",
-    "- MFCC-3 and beyond: fine-grained spectral variation."
+    "This test evaluates whether there are statistically significant differences in **spectral shape** between the vocalizations labeled as `\"yes\"` and `\"no\"`, using the **mean values of the first three MFCCs**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### What are MFCCs?\n",
+    "\n",
+    "- **MFCC-1**: Captures the overall **spectral slope** — indicates the energy balance between low and high frequencies.\n",
+    "- **MFCC-2**: Captures the **curvature** of the spectral envelope — flat vs. peaked energy in the mid frequencies.\n",
+    "- **MFCC-3**: Represents **fine-grained variation** — subtle changes or \"ripples\" in the spectral shape.\n",
+    "- Higher-order MFCCs (4, 5, …) capture increasingly localized detail and high-frequency texture.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Test Setup\n",
+    "\n",
+    "- **Statistic**: Mann-Whitney U test\n",
+    "- **Effect Size**: Cohen’s *d*\n",
+    "- **Input Features**: Mean of MFCC-1 to MFCC-3 per sample\n",
+    "- **Groups Compared**: `\"yes\"` vs `\"no\"` vocalizations\n",
+    "- **Sample Size**: 50 samples per label\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Why This Matters\n",
+    "\n",
+    "If MFCC means differ significantly between groups, it suggests that **spectral characteristics** of the vocalizations carry **discriminative information**. This can help differentiate types of vocal intent, even in non-verbal speech.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Results\n",
+    "\n",
+    "__Group Means & Standard Deviations__\n",
+    "\n",
+    "| Label | MFCC-1 Mean ± Std | MFCC-2 Mean ± Std | MFCC-3 Mean ± Std |\n",
+    "|-------|-------------------|-------------------|-------------------|\n",
+    "| **Yes** | -325.40 ± 35.08 | 125.82 ± 20.04 | 25.99 ± 16.56 |\n",
+    "| **No**  | -255.81 ± 48.42 | 128.74 ± 29.64 | -1.40 ± 20.49 |\n",
+    "\n",
+    "\n",
+    "__Statistical Results Summary__\n",
+    "\n",
+    "| MFCC      | U Statistic | p-value        | Cohen’s *d* | Mean Diff | Significant |\n",
+    "|-----------|-------------|----------------|-------------|-----------|-------------|\n",
+    "| **MFCC-1** | 148.0       | 2.16e-05      | -1.90       | -69.59    | ✅ Yes       |\n",
+    "| **MFCC-2** | 571.0       | 0.7886        | -0.14       | -2.92     | ❌ No        |\n",
+    "| **MFCC-3** | 1010.0      | 0.00012      | +1.61       | +27.39    | ✅ Yes       |\n",
+    "\n",
+    "\n",
+    "### Interpretation:\n",
+    "\n",
+    "- **MFCC-1** and **MFCC-3** show statistically significant and **large** differences between \"yes\" and \"no\" samples (Cohen’s *d* > 1.5).\n",
+    "- **MFCC-2** does not differ significantly between the two groups.\n",
+    "- These results indicate that **low and mid-frequency spectral properties** (slope and variation) carry meaningful differences between vocalizations, while overall mid-frequency curvature does not.\n",
+    "\n",
+    "*This suggests that MFCC-1 and MFCC-3 may be useful features for classifying or clustering intent in non-verbal vocalizations.* \n"
    ]
   },
   {
