added headers for hypothesis testing section and pitch variance results

--- a/checkpoint2/checkpoint2.ipynb
+++ b/checkpoint2/checkpoint2.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocessing"
+    "## Preprocessing"
    ]
   },
   {
@@ -631,6 +631,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spectrograms of Unique Label Groups\n",
+    "\n",
+    "This grid displays one **Mel spectrogram** for each unique vocalization label in the dataset. Each spectrogram represents a **single audio sample** randomly selected from that label group.\n",
+    "\n",
+    "#### Why Spectrograms?\n",
+    "A spectrogram is a time-frequency visualization of sound. It shows how energy (brightness) is distributed across frequency bins (y-axis) over time (x-axis). Brighter regions indicate more intensity at that frequency and time.\n",
+    "\n",
+    "#### Why Do Some Spectrograms Cut Off or Show Flat Color?\n",
+    "You may notice that many spectrograms appear to **suddenly turn into a solid blue color** after a certain point. This occurs because:\n",
+    "\n",
+    "- All spectrograms have been **padded or cropped to a fixed width** (`target_length`), ensuring uniform input size for modeling.\n",
+    "- When the original audio sample is **shorter than the target time length**, the remaining time frames are filled with **zeros** — resulting in that flat, dark blue region on the right.\n",
+    "- This is done to make all inputs the same shape for consistent processing and modeling (e.g., embeddings or CNNs).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "These spectrograms give an intuitive view of the **acoustic patterns** present in each vocalization type — for example:\n",
+    "- \"YES\" shows low-frequency harmonics,\n",
+    "- \"FRUSTRATED\" is noisier and denser,\n",
+    "- \"SELF-TALK\" often contains repeating patterns,\n",
+    "- \"GLEE\" and \"DELIGHTED\" appear more tonal or melodic.\n",
+    "\n",
+    "This kind of visualization helps validate that **distinct spectral features** exist across labels, supporting downstream classification or clustering tasks.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -654,22 +683,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Extraction and Hypothesis Testing\n",
+    "## Feature Extraction & Hypothesis Testing\n",
     "\n",
-    "### Tests Ran:\n",
-    "1. Pitch Variability Mann-Whitney \n",
-    "2. MFCC Difference Mann-Whitney\n",
-    "3. ??\n",
+    "In this section, we extract acoustic features from vocalizations and statistically evaluate whether they differ significantly across expression labels. These tests aim to determine if vocal cues such as **pitch variability** and **spectral shape** (MFCCs) carry meaningful information that can distinguish between intents like `\"yes\"` and `\"no\"`.\n",
     "\n",
-    "### Results: \n",
-    "TODO"
+    "---\n",
+    "\n",
+    "### Tests Conducted:\n",
+    "1. **Pitch Variability** – Mann-Whitney U test on pitch standard deviation across samples.\n",
+    "2. **MFCC Differences** – Mann-Whitney U test on mean MFCC coefficients (1–3).\n",
+    "3. _[Optional future test: e.g., energy, duration, zero-crossing rate, etc.]_\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Results:\n",
+    "\n",
+    "Our statistical tests revealed **significant acoustic differences** between `\"yes\"` and `\"no\"` vocalizations:\n",
+    "\n",
+    "- **Pitch Variability**:\n",
+    "  - \"No\" vocalizations showed **much higher pitch variability** (std = 119.13) compared to \"Yes\" (std = 22.46).\n",
+    "  - Mann-Whitney U test confirmed this with **p < 0.001** and a large effect size (**Cohen’s d = -2.38**).\n",
+    "\n",
+    "- **MFCCs (Spectral Shape)**:\n",
+    "  - Significant differences were found in **MFCC-1** and **MFCC-3** (both **p < 0.001**, Cohen’s d > 1.6), indicating strong differences in **spectral slope** and **fine spectral variation**.\n",
+    "  - **MFCC-2** showed **no significant difference**, suggesting similar mid-frequency emphasis in both groups.\n",
+    "\n",
+    "These findings suggest that both **pitch dynamics** and **spectral shape** are promising features for distinguishing vocal intent in non-verbal utterances for the model development phase.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test 1: Pitch Variability between \"Yes\" and \"No\" with Mann-Whitney"
+    "### Test 1: Pitch Variability Differences between \"Yes\" and \"No\" Vocalizations (Mann-Whitney U Test)\n",
+    "\n",
+    "This test evaluates whether there are statistically significant differences in **pitch variability** between vocalizations labeled as `\"yes\"` and `\"no\"`. Pitch variability is measured as the **standard deviation of estimated pitch (f₀)** across time for each audio sample. This metric reflects how much the speaker's pitch varies within a single utterance — often tied to emotional expressiveness or vocal intent.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### What is Pitch Variability?\n",
+    "\n",
+    "- Calculated using **Librosa's PYIN algorithm**, which estimates fundamental frequency (f₀) for voiced segments of an audio signal.\n",
+    "- We then compute the **standard deviation** of those f₀ values per sample.\n",
+    "- A **higher pitch std** generally means more variation in tone, while a lower std suggests more monotonic vocalization.\n",
+    "\n",
+    "#### Test Setup\n",
+    "\n",
+    "- **Statistic**: Mann-Whitney U test (non-parametric)\n",
+    "- **Effect Size**: Cohen’s *d*\n",
+    "- **Input Feature**: Standard deviation of pitch per sample\n",
+    "- **Groups Compared**: `\"yes\"` vs `\"no\"` vocalizations\n",
+    "- **Sample Size**: 100 samples for \"yes\", 12 samples for \"no\"\n",
+    "\n",
+    "#### Group Means & Standard Deviations\n",
+    "\n",
+    "| Label      | Pitch Std (Mean ± Std) |\n",
+    "|------------|------------------------|\n",
+    "| **Yes**    | 22.46 ± 21.78          |\n",
+    "| **No**     | 119.13 ± 110.34        |\n",
+    "\n",
+    "#### Statistical Results Summary\n",
+    "\n",
+    "| Metric             | Value                         |\n",
+    "|--------------------|-------------------------------|\n",
+    "| **U Statistic**     | 247.0                         |\n",
+    "| **p-value**         | 0.00091                       |\n",
+    "| **Cohen’s d**       | -2.38                         |\n",
+    "| **Mean Difference** | -96.67                        |\n",
+    "| **Significant**     | ✅ Yes                        |\n",
+    "\n",
+    "### Interpretation:\n",
+    "\n",
+    "- The **\"no\"** vocalizations exhibit **dramatically higher pitch variability** than \"yes\" samples — almost **5× higher on average**.\n",
+    "- The test yields a **very low p-value (< 0.001)** and a **large negative effect size (Cohen’s d = -2.38)**, indicating a strong and statistically significant difference.\n",
+    "- This suggests that **pitch dynamics** could be a powerful feature in differentiating certain types of vocal intent, especially when classifying expressive vs. flat responses.\n"
    ]
   },
   {
@@ -1177,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
